Test cases for other methods added